mobile spacing issue fix

--- a/src/app/pages/howto/howto.component.css
+++ b/src/app/pages/howto/howto.component.css
@@ -118,6 +118,9 @@
     height: 14px;
     vertical-align: middle;
   }
+  .howtocont{
+    padding-top: 10px;
+  }
   .howto-banner{
     width: 100%;
     height: 280px;
